--- a/uixpb_templates/css/uix-page-builder.min-rtl.css
+++ b/uixpb_templates/css/uix-page-builder.min-rtl.css
@@ -1,6 +1,6 @@
 /*
 
-	 Uix Page Builder (RTL)
+	 Uix Page Builder (RTL) - Minimize stylesheets
 	 Plugin URI: https://uiux.cc/wp-plugins/uix-page-builder/
 	 Author: UIUX Lab
 	 Author URI: https://uiux.cc
